# python-podcast

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  Procfile  README.rst  analytics_cron.sh  commands.py  justfile  local.yml  manage.py  postactivate  production.yml  pyproject.toml  supervisor.conf  view_logs.py
.envs/.local/: .postgres
compose/local/django/: Dockerfile  bashrc  start
compose/production/django/: Dockerfile  bashrc  start
config/: urls.py  wsgi.py
config/settings/: base.py  e2e.py  local.py  production.py  staging.py  test.py
deploy/: backup_database.yml  deploy.yml  postgres.yml  python.yml  remove.yml  requirements.yml  restore_database.yml  secrets.yml  secrets_production.yml  secrets_staging.yml  traefik.template.j2  traefik.yml  vars.yml
deploy/host_vars/: production.yml  staging.yml
deploy/inventory/: hosts.yml
deploy/templates/: env.template.j2  gunicorn.sh.j2  traefik.template.j2
docs/: Makefile  conf.py  convert-show-notes-runbook.rst  deploy.rst  index.rst  install.rst  known-speaker-runbook.rst  make.bat
docs/pycharm/: configuration.rst
notebooks/: Untitled.ipynb  access_log_utf8_bug.ipynb  accesslog.ipynb  audio_tests.ipynb  comments.ipynb  debug_filter_pages_api_with_garbage_slug.ipynb  debug_password_reset_429.ipynb  split_blog_and_podcast.ipynb  split_post_and_episode.ipynb  wagtail_or_django_filter_garbage_bug.ipynb
notebooks/transcripts/: complete_from_mp3_to_transcripts_whisper_cloud.ipynb
notebooks/wagtail_migration/: audio_missing_debug.ipynb  from_legacy_python_podcast_to_wagtail.ipynb  no_player_on_blog_list.ipynb  restore_backup_into_different_db.ipynb  spamfilter_debug.ipynb
python_podcast/: conftest.py
python_podcast/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
python_podcast/core/: __init__.py  views.py
python_podcast/fedi/: apps.py  urls.py  views.py
python_podcast/pp/: apps.py  context_processors.py  views.py
python_podcast/pp/management/commands/: convert_show_notes.py
python_podcast/pp/show_notes/: blocks.py  converter.py  icons.py
python_podcast/pp/templatetags/: pp_persistent_player.py  pp_show_note_icons.py
python_podcast/pp/tests/: test_convert_show_notes_command.py  test_show_note_blocks.py  test_show_note_converter.py
python_podcast/static/css/: persistent-player-dock.min.css  persistent-player.css  persistent-player.min.css  project.css  show-notes.css  site-overrides.css
python_podcast/static/css/pp/: style.css
python_podcast/static/js/: persistent-player.js  persistent-player.min.js
python_podcast/static/js/subscribe_button/: app.js
python_podcast/static/sass/: project.scss
python_podcast/static/subscribe_button/: button.html
python_podcast/static/subscribe_button/javascripts/: app.js
python_podcast/static/subscribe_button/stylesheets/: app.css  app.css.map
python_podcast/templates/: 403_csrf.html  404.html  429.html  500.html  base.html
python_podcast/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
python_podcast/templates/cast/: _persistent_play_action.html  _persistent_player_critical.min.css  blog_list_of_posts.html  episode.html  post_body.html  post_list.html
python_podcast/templates/cast/audio/: audio.html
python_podcast/templates/cast/bootstrap4/: base.html  blog_list_of_posts.html  blog_list_of_posts_partial.html  episode.html  post.html  post_body.html
python_podcast/templates/cast/bootstrap5/: audio.html  base.html  blog_list_of_posts.html  episode.html  feed_detail.html  post.html  post_body.html
python_podcast/templates/cast/bootstrap5/styleguide/: index.html
python_podcast/templates/cast/pp/: _blog_header.html  _list_of_posts_and_paging_controls.html  audio.html  base.html  blog_list_of_posts.html  pagination.html  player_template.html  post.html  post_body.html
python_podcast/templates/cast/pp/show_notes/: heading.html  link_list.html  sponsor.html
python_podcast/templates/cast/pp/styleguide/: index.html  sections.html
python_podcast/templates/pages/: about.html  dsgvo.html  home.html  impressum.html
python_podcast/templates/users/: user_detail.html  user_form.html  user_list.html
python_podcast/users/: admin.py  apps.py  forms.py  urls.py
python_podcast/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_id.py
python_podcast/users/tests/: factories.py  test_forms.py  test_urls.py  test_views.py
requirements/: base.txt  develop.in  develop.txt  local.txt  production.in  production.txt
scripts/: minify_static.py  prod_backup.py  prod_to_local.py
tests/: test_performance_assets.py  test_persistent_player_config.py  test_transcript_storage_config.py
tests/e2e/: STAGING_PROOF.md  _helpers.py  conftest.py  staging_beautification.py  staging_comment_edit_check.py  staging_goal_check.py  staging_persistent_player.py  test_custom_player.py  test_persistent_player.py
