[project]
name = "lead"
version = "0.1.0"
description = "Generate leads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi",
    "boto3",
    "cast-bootstrap5",
    "cast-vue",
    "django-allauth",
    "django-anymail[mailgun]",
    "django-extensions",
    "django-indieweb",
    "django-proxy",
    "django-storages",
    "django-cast",
    "gunicorn",
    "psycopg[binary]",
    "python-dotenv",
    "pyzmq>=25.1.1",  # needed for Python >= 3.12
    "sentry-sdk",
    "whitenoise",
]

[tool.uv]
dev-dependencies = [
    "black",
    "coverage",
    "factory-boy",
    "flake8",
    "flit",
    "django-debug-toolbar",
    "django-test-plus",
    "dj-notebook",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "psutil",
    "rich",
    "sphinx_rtd_theme",
    "typer",
    "django-removals",
]

[tool.uv.sources]
cast-vue = { git = "https://github.com/ephes/cast-vue" }
cast-bootstrap5 = { git = "https://github.com/ephes/cast-bootstrap5" }
django-cast = { git = "https://github.com/ephes/django-cast", branch = "develop" }
django-indieweb = { git = "https://github.com/ephes/django-indieweb", branch = "develop" }

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/*/tests/*", "apps/*/migrations/*"]
command_line = "-m pytest"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
filterwarnings = [
]
addopts = [
    "-ra",
    "--reuse-db",
    "--no-migrations",
]

[tool.specsync]
workspace_subdir = "specs"
repo_specs_dir = "specs"

[tool.specsync.filter]
require_expose = true
match_project = true
