[project]
name = "lead"
version = "0.1.0"
description = "Generate leads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi",
    "boto3",
    "cast-bootstrap5",
    "cast-vue",
    "django-allauth",
    "django-anymail[mailgun]",
    "django-environ",
    "django-extensions",
    "django-tasks==0.12.0",
    "django-tasks-db==0.12.0",
    "django-indieweb",
    "django-proxy",
    "django-storages",
    "django-cast",
    "gunicorn",
    "modelsearch>=1.3,<1.4",
    "psycopg[binary]",
    "python-dotenv",
    "pyzmq>=25.1.1",           # needed for Python >= 3.12
    "sentry-sdk",
    "wagtail>=7.4,<7.5",
    "whitenoise",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "factory-boy",
    "flake8",
    "flit",
    "django-debug-toolbar",
    "django-test-plus",
    "dj-notebook",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "pytest-playwright",
    "psutil",
    "rich",
    "sphinx_rtd_theme",
    "typer",
    "django-removals",
    "prek>=0.3.9",
    "rcssmin>=1.2.2",
    "rjsmin>=1.2.5",
]

[tool.uv.sources]
cast-vue = { git = "https://github.com/ephes/cast-vue" }
# Git sources for deploys (rsync sends the working tree, so the deployed
# pyproject must resolve server-side). Production and staging both use the
# persistent player from cast-bootstrap5 main.
# Locally, restore the editable `path = "../…"` entries to resume local preview.
cast-bootstrap5 = { git = "https://github.com/ephes/cast-bootstrap5" }
django-cast = { git = "https://github.com/ephes/django-cast", branch = "develop" }
django-indieweb = { git = "https://github.com/ephes/django-indieweb", branch = "develop" }

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/*/tests/*", "apps/*/migrations/*"]
command_line = "-m pytest"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
filterwarnings = []
# e2e tests are excluded by default: they need config.settings.e2e, built Vite
# manifests, Playwright browsers, ffmpeg, and --migrations. Run them explicitly
# with `just test-e2e` (or `-m e2e --migrations` under DJANGO_SETTINGS_MODULE=
# config.settings.e2e). A CLI `-m e2e` overrides this default deselection.
addopts = ["-ra", "--reuse-db", "--no-migrations", "-m", "not e2e"]
markers = [
    "e2e: browser-level end-to-end tests (require Playwright + a browser)",
]

[tool.specsync]
workspace_subdir = "specs"
repo_specs_dir = "specs"

[tool.specsync.filter]
require_expose = true
match_project = true
